Added New files and also deleted old code files

--- a/index.html
+++ b/index.html
@@ -3,69 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poetry Blog</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Add this to the <head> section of your HTML -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <title>Simple Poetry Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="logo">Poetry Blog</div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <button>Search</button>
-        </div>
-        <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-        </div>
+        <h1>My Poetry Collection</h1>
     </header>
+    
+    <nav>
+        <ul id="poem-list">
+            <li><a href="#" data-id="1">Poem 1</a></li>
+            <li><a href="#" data-id="2">Poem 2</a></li>
+            <li><a href="#" data-id="3">Poem 3</a></li>
+        </ul>
+    </nav>
 
-    <section class="hero">
-        <img src="hero-image.jpg" alt="Hero Image">
-        <h1>Welcome to the Poetry Blog</h1>
-        <a href="#" class="cta-button">Explore Poetry</a>
-    </section>
+    <div id="poem-content">
+        <h2>Welcome to My Poetry Collection</h2>
+        <p>Select a poem from the menu to get started.</p>
+    </div>
 
-    <section class="featured-poems">
-        <!-- Featured poems content here -->
-    </section>
-
-    <section class="blog-posts">
-        <!-- Blog posts content here -->
-    </section>
-
-    <section class="categories">
-        <!-- Categories content here -->
-    </section>
-
-    <footer>
-        <div class="footer-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-        <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-        </div>
-        <p>&copy; 2023 Poetry Blog. All rights reserved.</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
